[metadata]
name = tmu
version = 0.1.0
summary = Tenant Management Utilitary
description-file =
    README.md
author = Stefan Caraiman
author-email = stefanc.caraiman@gmail.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    tmu

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    tmu = tmu.shell:main

oslo.config.opts =
    tmu.conf = tmu.config.options:get_options
